--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-    "name": "my-project",
-    "version": "1.0.0",
-    "description": "A brief description of your project",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node index.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "MIT",
-    "dependencies": {
-      "express": "^4.17.1"
-    },
-    "devDependencies": {
-      "nodemon": "^2.0.12"
-    },
-    "engines": {
-      "node": ">=14.0.0"
-    }
+  "name": "zombie-fighter-game",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "^4.3.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "react-refresh": "^0.14.0",
+    "vite": "^4.0.0"
   }
+}
